# EyeOnReddit

./: .gitignore  CMakeLists.txt  EyeOnReddit.pro  README.md  defaults.pri
app/: app.pro
app/Android/src/: main.cpp
app/Assets/: assets.qrc
app/Desktop/QML/: AppearanceSettings.qml  BaseInput.qml  Button.qml  FloatInput.qml  GeneralSettings.qml  IntegerInput.qml  RedditView.qml  SettingsHeadline.qml  SettingsWindow.qml  SubFrontpageView.qml  SublistView.qml  SubredditAlertView.qml  SubredditSettings.qml  debugloader.qml  desktop.qrc  main.qml
app/Desktop/src/: Settings.cpp  Settings.hpp  SystemTrayIcon.cpp  SystemTrayIcon.hpp  main.cpp
app/QML/: main.qml
app/QML/Android/: main.qml
src/: CMakeLists.txt  FileDownloader.cpp  FileDownloader.hpp  Reddit.cpp  Reddit.hpp  RedditPost.cpp  RedditPost.hpp  RedditSub.cpp  RedditSub.hpp  Submonitor.cpp  Submonitor.hpp  Subreddit.cpp  Subreddit.hpp  src.pro
src/backend/: FileDownloader.hpp  Subreddit.cpp  Subreddit.hpp
tests/: CMakeLists.txt  Submonitor_tests.cpp  Subreddit_tests.cpp  testMacros.hpp  tests.pro
unittests/: CMakeLists.txt
unittests/tests/: CMakeLists.txt  Subreddit_tests.cpp
